# JEC

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
cmake/: FindANTLR.cmake  FindCVC4.cmake  FindCaDiCaL.cmake  FindGMP.cmake  FindOpensmt.cmake  FindReadline.cmake
cmake/Boolector/: BoolectorTargets-release.cmake  BoolectorTargets.cmake
dependencies/CaDiCaL/example/: apitrace.cpp  cfreeze.c  cipasir.c  ctest.c  ipasir.h  morenmore.cpp  terminate.cpp  traverse.cpp
dependencies/cvc4/api/: cvc4cpp.h  cvc4cppkind.h
dependencies/cvc4/base/: configuration.h  modal_exception.h
dependencies/cvc4/context/: cdhashmap_forward.h  cdinsert_hashmap_forward.h  cdlist_forward.h
dependencies/cvc4/expr/: array_store_all.h  datatype.h  emptyset.h  expr_iomanip.h  record.h  type.h  uninterpreted_constant.h
dependencies/cvc4/options/: option_exception.h  options.h  set_language.h
dependencies/cvc4/parser/: input.h  parser.h  parser_exception.h
dependencies/cvc4/printer/: sygus_print_callback.h
dependencies/cvc4/proof/: unsat_core.h
dependencies/cvc4/theory/: theory_id.h
dependencies/cvc4/util/: bitvector.h  divisible.h  floatingpoint.h  hash.h  integer.h  integer_gmp_imp.h  maybe.h  rational_cln_imp.h  rational_gmp_imp.h  string.h  tuple.h  unsafe_interrupt_exception.h
dependencies/opensmt/: Vec.h
examples/: CMakeLists.txt
iccad2020/: SC_EDA_Library.enl  iccad2020_JEC.docx
iccad2020/SC_EDA_Library.Data/rdb/: csort.MYI  jterms.MYD  jterms.MYI  misc.MYD  misc.MYI  pdf_index.MYD  pdf_index.MYI  refs.MYD  refs.MYI  refs_ext.MYD  refs_ext.MYI  terms.MYD  terms.MYI
iccad2020/SC_EDA_Library.Data/tdb/: csort.MYI  jterms.MYI  misc.MYD  misc.MYI  pdf_index.MYI  refs.MYD  refs.MYI  refs_ext.MYD  refs_ext.MYI  terms.MYI
iccad2020/reference/: 019-equivalence-checking.ppt  一种基于状态转换图的时序电路等价验证算法_魏萌.caj  基于BDD和SAT的形式验证方法的研究_陈丽.caj  基于SMT约束求解器的Verilog组合电路等价性验证_曾海林.caj
include/CRoaring/: CMakeLists.txt  roaring.hh
include/CaDiCaL/example/: example.cpp  learn.cpp  newdelete.cpp  unit.cpp
include/circuit/: edge.h  netlist.h  node.h  port.h
include/cvc4/: cvc4parser_public.h
include/cvc4/base/: exception.h  listener.h
include/cvc4/context/: cdhashset_forward.h
include/cvc4/expr/: array.h  ascription_type.h  expr.h  expr_manager.h  expr_sequence.h  kind.h  symbol_table.h  variable_type_map.h
include/cvc4/options/: language.h  printer_modes.h
include/cvc4/parser/: parse_op.h  parser_builder.h
include/cvc4/smt/: command.h  logic_exception.h  smt_engine.h
include/cvc4/theory/: logic_info.h
include/cvc4/util/: abstract_value.h  bitvector.h  bool.h  cardinality.h  gmp_util.h  integer_cln_imp.h  proof.h  rational.h  regexp.h  resource_manager.h  result.h  sexpr.h  statistics.h
include/ec/: cec.h  ec.h  jec.h  simplify.h
include/util/: _map_property.h  _map_property.hpp  _platform.h  _point.hpp  _properties.h  libfile.h  libhead.h  libstring.h  parser.h  util.h
lib/: libopensmt2.dylib
src/circuit/: edge.cpp  netlist.cpp  node.cpp  port.cpp
src/ec/: cec.cpp  ec.cpp  jec.cpp  simplify.cpp
src/util/: _map_property.cpp  _properties.cpp  libfile.cpp  libhead.cpp  libstring.cpp  parser.cpp  util.cpp
test/: cec_abc.c  evaluate.cpp  run.py  script.py  trace.cnf
test/golden/: adder.v  bar.v  c1355.v  c1908.v  c2670.v  c3540.v  c432.v  c499.v  c5315.v  c6288.v  c7552.v  c880.v  decoder.v  divisor.v  gf.v  gf_1_bit_full_adder.v  gf_abc_c1355.v  gf_abc_c1908.v  gf_abc_c3540.v  gf_abc_c432.v  gf_abc_c499.v  gf_abc_c5315.v  gf_abc_c6288.v  gf_abc_c7552.v  gf_abc_c880.v  gf_adder.v  gf_alu_1_jandf.v  gf_alu_2_jandf.v  gf_alu_4_jandf.v  gf_bar.v  gf_c1355.v  gf_c1908.v  gf_c3540.v  gf_c432.v  gf_c499.v  gf_c5315.v  gf_c6288.v  gf_c7552.v  gf_c880.v  gf_decoder.v  (+10 more)
test/log/: adder.txt  bar.txt  c1355.txt  c1908.txt  c3540.txt  c432.txt  c499.txt  c5315.txt  c6288.txt  c7552.txt  c880.txt  decoder.txt  divisor.txt  max.txt  multiplier.txt  one_bit_full_adder.txt  sin.txt
test/original/: c1355.bench  c17.bench  c1908.bench  c2670.bench  c3540.bench  c432.bench  c499.bench  c5315.bench  c6288.bench  c7552.bench  c880.bench  command.txt  multiplier.blif  one_bit_full_adder.v  rsfq.genlib  rsfq.genlib_temp  rsfq.super
test/output/: output.txt  output_c1908.txt
test/revise/: adder.v  bar.v  c1355.v  c1908.v  c2670.v  c3540.v  c432.v  c499.v  c5315.v  c6288.v  c7552.v  c880.v  decoder.v  divisor.v  log2.v  max.v  multiplier.v  rf.v  rf_1_bit_full_adder.v  rf_abc_c1355.v  rf_abc_c1908.v  rf_abc_c3540.v  rf_abc_c432.v  rf_abc_c499.v  rf_abc_c5315.v  rf_abc_c6288.v  rf_abc_c7552.v  rf_abc_c880.v  rf_alu_1_jandf.v  rf_alu_2_jandf.v  rf_alu_4_jandf.v  rf_bar.v  rf_c1355.v  rf_c1908.v  rf_c3540.v  rf_c432.v  rf_c499.v  rf_c5315.v  rf_c6288.v  rf_c7552.v  (+9 more)
test/rsfq/: add_1.v  alu_1.v  alu_2.v  alu_4.v  ksa4.v
